# music-pipe-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  explainer-demo.sh  music-pipe.env  plan.md  run-explainer-demo.sh
.github/workflows/: pages.yml
crates/mid2seq/: Cargo.toml
crates/mid2seq/src/: main.rs
crates/music-ir/: Cargo.toml
crates/music-ir/src/: lib.rs
crates/music-pipe/: Cargo.toml
crates/music-pipe/src/: main.rs
crates/stage-euclid/: Cargo.toml
crates/stage-euclid/src/: main.rs
crates/stage-humanize/: Cargo.toml
crates/stage-humanize/src/: main.rs
crates/stage-motif/: Cargo.toml
crates/stage-motif/src/: main.rs
crates/stage-rubato/: Cargo.toml
crates/stage-scale/: Cargo.toml
crates/stage-seed/: Cargo.toml
crates/stage-seq/: Cargo.toml
crates/stage-to-midi/: Cargo.toml
crates/stage-to-midi/src/: main.rs
crates/stage-transpose/: Cargo.toml
crates/stage-trim/: Cargo.toml
crates/stage-trim/src/: main.rs
crates/stage-viz/: Cargo.toml
docs/: ai_agent_instructions.md  architecture.md  design.md  next-steps.md  plan.md  prd.md  research.txt  status.md  usage.md
examples/: demo-bach-arcade.sh  demo-bach-esque.sh  demo-bach.sh  demo-baroque.sh  demo-batch-motif.sh  demo-cello-soft.sh  demo-gands-esque.sh  demo-hard-rock.sh  demo-mikado.sh  demo-random-motif.sh  demo-random-seq.sh  demo-rockabilly.sh  demo-soft-prog.sh  demo-valkyries.sh  demo-verdi-esque.sh  demo-wagner-esque.sh  demo.sh  pipe-demo.sh  trio-demo.sh
examples/batch-20260305-102950/: .gitignore  motif-1772735390544.txt  motif-1772735412112.txt
pages/: index.html
preview2/: demo-beerhall-seq.sh  demo-brass-motif.sh  demo-camptown.sh  demo-entertainer.sh  demo-folk-motif.sh  demo-maple-leaf.sh  demo-oh-susanna.sh  demo-polka-motif.sh  demo-ragtime-motif.sh  demo-reel-motif.sh  demo-saints.sh  demo-turkey.sh  index.html
(+6 files in other folders)
